# lemony-lrc-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: llp.py
src/lemony_lrc_parser/: __init__.py  exceptions.py  models.py  parser.py  regex.py  serializer.py  timetag.py
tests/: test_construct_lrc_offset.py  test_init_api.py  test_line_parser.py  test_models.py  test_parser_full.py  test_serializer_full.py  test_timetag.py
