[project]
name = "lemony-lrc-parser"
version = "0.1.0"
authors = [{ name = "LemonekoUwU", email = "lemoneko233uwu@gmail.com" }]
license = { file = "LICENSE" }
description = "A simple LRC parser for Python."
readme = "README.md"
requires-python = ">=3.9,<3.15"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
