[project]
name = "lemony-lrc-parser"
version = "0.2.0"
authors = [{ name = "LemonekoUwU", email = "lemoneko233uwu@gmail.com" }]
license = { file = "LICENSE" }
description = "A simple LRC parser for Python."
readme = "README.md"
requires-python = ">=3.9,<3.16"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.tox]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "3.15"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
deps = "pytest"
commands = [
    [
        "pytest",
        { replace = "posargs", default = [
            "tests",
        ], extend = true },
    ],
]
